[package]
name = "integer"
version = "1.0.0"
authors = ["Seungjae Park <astro.psj@gmail.com>"]
edition = "2018"
description = "Member Management Service"
repository = "https://github.com/int-i/integer"
license = "Apache-2.0"
keywords = ["inha-university", "rocket", "http", "api", "server"]
categories = ["web-programming::http-server"]
publish = false

[dependencies]
diesel = { version = "1.4.8", features = ["postgres"] }
rocket = { version = "0.5.0-rc.1", features = ["json"] }
rocket_sync_db_pools = { version = "0.1.0-rc.1", features = ["diesel_postgres_pool"] }
serde = "1.0.130"
